# t2-gpu

./: .gitignore  CMakeLists.txt  README.md  experiment.py  experiment_seq.py  makefile
include/: conway-gol.hpp
results/: 2d.csv  groups.csv  simple.csv
src/: CMakeLists.txt  conway-gol.cpp  conway.cpp  parallel-conway.cpp  parallel-conway.cu  sequential-conway.cpp
src/cuda/: 2d-array-parallel-conway.cu  cuda-main.cu  local-mem-parallel-conway.cu  simple-parallel-conway.cu
src/opencl/: CalcStep.cl  opencl-main.cpp
